@@ -49,12 +49,147 @@ int main() {
   }
   igraph_destroy(&g);
 
+  /* More useful tests */
+/*   printf("directed with loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 10, 0.9999999,
+			    IGRAPH_DIRECTED, IGRAPH_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 5; }
+    if (igraph_ecount(&g) != 10*10) { return 6; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*9) { return 6; }
+    igraph_destroy(&g);
+  }
+
+/*   printf("directed without loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 10, 0.9999999,
+			    IGRAPH_DIRECTED, IGRAPH_NO_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 7; }
+    if (igraph_ecount(&g) != 10*(10-1)) { return 8; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*9) { return 8; }
+    igraph_destroy(&g);
+  }
+  
+/*   printf("undirected with loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 10, 0.9999999,
+			    IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 9; }
+    if (igraph_ecount(&g) != 10*(10+1)/2) { return 10; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*(10-1)/2) { return 10; }
+    igraph_destroy(&g);
+  }
+
+/*   printf("undirected without loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 10, 0.9999999,
+			    IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 11; }
+    if (igraph_ecount(&g) != 10*(10-1)/2) { return 12; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*(10-1)/2) { return 12; }
+    igraph_destroy(&g);
+  }    
+
+  /* Create a couple of large graphs too */
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 100000, 2.0/100000,
+			  IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 25; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 100000, 2.0/100000,
+			  IGRAPH_DIRECTED, IGRAPH_NO_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 25; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 100000, 2.0/100000,
+			  IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 25; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNP, 100000, 2.0/100000,
+			  IGRAPH_DIRECTED, IGRAPH_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 25; }
+  igraph_destroy(&g);
+  
+
+  /* --------------------------------------------------------------------- */
+  /* G(n,m) */
+  
   igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 10, 0.5,
 			  IGRAPH_DIRECTED, IGRAPH_NO_LOOPS);
   igraph_destroy(&g);
 
-  /* G(n,m) */
+  /* More useful tests */
+/*   printf("directed with loops\n"); */
+  for (i=0; i<100; i++) {
+    long int ec;
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 10, 10*10-1,
+			    IGRAPH_DIRECTED, IGRAPH_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 13; }
+    if (igraph_ecount(&g) != 10*10-1) { return 14; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    ec=igraph_ecount(&g);
+    if (ec != 10*9 && ec != 10*9-1) { return 15; }
+    igraph_destroy(&g);
+  }
+
+/*   printf("directed without loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 10, 10*9-1,
+			    IGRAPH_DIRECTED, IGRAPH_NO_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 16; }
+    if (igraph_ecount(&g) != 10*(10-1)-1) { return 17; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*9-1) { return 18; }
+    igraph_destroy(&g);
+  }
   
+/*   printf("undirected with loops\n"); */
+  for (i=0; i<100; i++) {
+    long int ec;
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 10, 10*11/2-1,
+			    IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 19; }
+    if (igraph_ecount(&g) != 10*(10+1)/2-1) { return 20; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    ec=igraph_ecount(&g);
+    if (ec != 10*(10-1)/2 && ec != 10*9/2-1) { return 21; }
+    igraph_destroy(&g);
+  }
+
+/*   printf("undirected without loops\n"); */
+  for (i=0; i<100; i++) {
+    igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 10, 10*9/2-1,
+			    IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
+    if (igraph_vcount(&g) != 10) { return 22; }
+    if (igraph_ecount(&g) != 10*(10-1)/2-1) { return 23; }
+    igraph_simplify(&g, /*multiple=*/0, /*loops=*/1);
+    if (igraph_ecount(&g) != 10*(10-1)/2-1) { return 24; }
+    igraph_destroy(&g);
+  }  
+
+  /* Create a couple of large graphs too */
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 100000, 2.0*100000,
+			  IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 26; }
+  if (igraph_ecount(&g) != 200000) { return 26; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 100000, 2.0*100000,
+			  IGRAPH_DIRECTED, IGRAPH_NO_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 26; }
+  if (igraph_ecount(&g) != 200000) { return 26; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 100000, 2.0*100000,
+			  IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 26; }
+  if (igraph_ecount(&g) != 200000) { return 26; }
+  igraph_destroy(&g);
+  igraph_erdos_renyi_game(&g, IGRAPH_ERDOS_RENYI_GNM, 100000, 2.0*100000,
+			  IGRAPH_DIRECTED, IGRAPH_LOOPS);
+  if (igraph_vcount(&g) != 100000) { return 26; }
+  if (igraph_ecount(&g) != 200000) { return 26; }
+  igraph_destroy(&g);
 
   return 0;
 }
